# sandbox-runtime-rs

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-14-refactor-declarative-api.md
docs/superpowers/specs/: 2026-03-14-refactor-declarative-api-design.md
src/: child.rs  command.rs  error.rs  lib.rs  main.rs  violation.rs
src/config/: loader.rs  mod.rs  schema.rs
src/manager/: mod.rs  network.rs  state.rs
src/proxy/: filter.rs  http.rs  mod.rs  socks5.rs
src/sandbox/: mod.rs
src/sandbox/linux/: bridge.rs  bwrap.rs  filesystem.rs  mod.rs  monitor.rs  runner.c  seccomp.rs
src/sandbox/macos/: glob.rs  mod.rs  monitor.rs  profile.rs  wrapper.rs
src/utils/: mod.rs  path.rs  platform.rs  ripgrep.rs  shell.rs
src/violation/: store.rs
tests/: declarative_api_test.rs
