[package]
name = "sandbox-runtime"
version = "0.1.1"
edition = "2021"
authors = ["wangyeux@gmail.com"]
description = "OS-level sandboxing library for enforcing filesystem and network restrictions"
license = "MIT"
repository = "https://github.com/wangyedev/sandbox-runtime-rs"
readme = "README.md"
keywords = ["sandbox", "security", "isolation", "macos", "linux"]
categories = ["development-tools"]
exclude = [".upstream-cache/", ".upstream-sync/"]

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
dirs = "5"
base64 = "0.22"
rand = "0.8"
regex = "1"
once_cell = "1"
bytes = "1"
libc = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process", "fs", "socket", "uio", "poll", "ioctl"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
